--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CV with Slider and Scroll Effects</title>
+  <title>CV for Martins Chibueze Awesome (BincomDev Center)</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -13,10 +13,11 @@
 
     <div class="slider scroll-slide">
       <center>
+      <h2>Pictures of Myself(with coursemates)</h2>
       <img src="1.jpg" class="slide active" alt="Image 1" />
       <img src="2.jpg" class="slide" alt="Image 2" />
       <img src="3.jpg" class="slide" alt="Image 3" />
-      <img src="4.jpg" class="slide" alt="Image 4" />
+      <img src="4.jpg" class="slide" alt="Sen 400lvl" />
       <img src="5.jpg" class="slide" alt="Image 5" />
       </center>
     </div>
